--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,147 @@
-.App {
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 10px;
+}
+.app {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* SignUp Form */
+/* =========== */
+
+.signup {
+  width: 50rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem;
+  font-size: 1.5rem;
+  background-color: #ffffff;
+  box-shadow: 3px 3px 50px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
+}
+.form-heading {
+  font-size: 1.8rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 2px solid #000;
+}
+/* Check Box */
+.container-check-box {
+  display: block;
+  position: relative;
+  padding-left: 2.5rem;
+  cursor: pointer;
+  font-size: 1.4rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+/* Hide the browser's default checkbox */
+.container-check-box input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1.6rem;
+  width: 1.6rem;
+  background-color: #ccc;
+}
+
+/* On mouse-over, add a grey background color */
+.container-check-box:hover input ~ .checkmark {
+  background-color: #757575;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container-check-box input:checked ~ .checkmark {
+  background-color: #000;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container-check-box input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container-check-box .checkmark:after {
+  left: 5px;
+  top: 1px;
+  width: 0.3rem;
+  height: 0.8rem;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.form-control {
+  width: 80%;
+  padding: 0.5rem;
+  margin: 0.3rem;
+  /* border: 1px solid black; */
+}
+.form-label {
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+}
+.form-control input {
+  width: 100%;
+  padding: 0.7rem;
+  border: none;
+  outline: none;
+  background-color: #cecece;
+  border-radius: 6px;
+  margin-top: 0.5rem;
+  font-size: 1.2rem;
+  font-family: "Poppins", sans-serif;
+}
+.form-control-button {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-control .button {
+  background-color: #000;
+  color: #fff;
+  width: 50%;
+  margin-bottom: 2rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.captcha {
+  border: 1px solid black;
+  height: 30px;
+  margin: 1rem 0;
+  width: 70%;
+  border-radius: 6px;
 }
