--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,21 @@
 html {
   font-size: 10px;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  color: purple;
+}
 .app {
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-a {
-  text-decoration: none;
-  color: purple;
 }
 /* SignUp Form */
 /* =========== */
