--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,11 +3,12 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
 }
 .card {
-  width: 32rem;
+  width: 30rem;
   height: 42rem;
-  margin: 3rem 3.1rem;
+  margin: 2rem 3.5rem;
   background-color: #fff;
   border-radius: 1.5rem;
   overflow: hidden;
@@ -57,7 +58,9 @@
   background-color: #999;
   color: black;
 }
-
+.requestBtns {
+  display: flex;
+}
 .card .request {
   width: 40%;
   margin: 0rem 1.5rem;
