--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -81,13 +81,15 @@ header a {
 }
 
 @media screen and (max-width: 1024px) {
-  .tab > div {
-    display: none;
-  }
   .btn > button {
     display: none;
   }
   .logo span {
+    display: none;
+  }
+}
+@media screen and (max-width: 700px) {
+  .tab > div {
     display: none;
   }
 }
