--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,9 @@ a {
   color: purple;
 }
 .app {
-  height: 100vh;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
