--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -4,13 +4,103 @@
 }
 .chat-header {
   height: 10%;
-  border: 1px solid white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-left: 3px solid orange;
+  border-bottom: 3px solid orange;
+  border-bottom-left-radius: 1rem;
 }
+.chat-header div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.chat-header div img {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 100%;
+  margin: 0 1.5rem;
+}
+.chat-header div span {
+  color: rgb(253, 220, 159);
+  font-size: 1.8rem;
+  letter-spacing: 1.5px;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+.call-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+.call-icon img {
+  height: 3.2rem;
+  width: 3.2rem;
+  margin: 0.75rem;
+  padding: 0.5rem;
+  border-radius: 100%;
+  background-color: orange;
+}
+.call-icon img:hover {
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+}
+
 .chat-footer {
   height: 10%;
-  border: 1px solid black;
+  display: flex;
+  align-items: center;
+}
+.chat-footer input[type="text"] {
+  height: 70%;
+  width: 90%;
+}
+
+.btn {
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  border: 0;
+  outline: 0;
+  padding: 0;
+  font-size: 1.2rem;
+  transition: all 200ms ease-in;
+  cursor: pointer;
+}
+.btn-primary {
+  background: #7f8ff4;
+  color: #fff;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 12px 36px;
+}
+.btn-primary:hover {
+  background: #6c7ff2;
+}
+.btn-primary:active {
+  background: #7f8ff4;
+  box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+.btn-inside {
+  border-radius: 1.2rem;
+  margin-left: -110px;
+}
+
+.form-field {
+  width: 99%;
+  height: 80%;
+  background: #fff;
+  color: #a3a3a3;
+  font: 1.2rem;
+  border-radius: 1.5rem;
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  border: 0;
+  outline: 0;
+  padding: 22px 18px;
 }
 .chating {
   height: 80%;
-  border: 1px solid black;
+  border: 1px solid #80d0c7;
 }
